fix: alignment issue where the login image has a weird white bar on the bottom

--- a/src/views/Auth.scss
+++ b/src/views/Auth.scss
@@ -28,9 +28,10 @@
 
   source,
   img {
-    object-fit: cover;
     width: 66vw;
     height: 100vh;
+    vertical-align: top;
+    object-fit: cover;
   }
 
   @media screen and (max-width: 1024px) {
